--- a/assets/css/jkeyboard.css
+++ b/assets/css/jkeyboard.css
@@ -1,7 +1,7 @@
 .jkeyboard {
   display: inline-block;
-  border: 2px solid black;
-  padding: 10px;
+  border: 1px solid black;
+  padding: 15px;
   border-radius: 15px;
   box-sizing: border-box;
 }
@@ -12,23 +12,23 @@
 }
 .jkeyboard .jline {
   text-align: center;
-  margin-left: -14px;
+  margin-left: 0;
 }
 .jkeyboard .jline ul li {
   font-family: arial, sans-serif;
   font-size: 20px;
   display: inline-block;
-  border: 1px solid #468db3;
+ /* border: 1px solid #468db3;
   -webkit-box-shadow: 0 0 3px #468db3;
-  -webkit-box-shadow: inset 0 0 3px #468db3;
-  margin: 10px 0 1px 14px;
-  color: black;
+  -webkit-box-shadow: inset 0 0 3px #468db3;*/
+  margin: 0px 0px 0px 0px;
+  color: gray;
   border-radius: 5px;
-  width: 30px;
-  height: 42px;
+  width: 40px;
+  height: 52px;
   box-sizing: border-box;
   text-align: center;
-  line-height: 42px;
+  line-height: 52px;
   overflow: hidden;
   cursor: pointer;
   -webkit-touch-callout: none;
@@ -37,12 +37,13 @@
   -moz-user-select: -moz-none;
   -ms-user-select: none;
   user-select: none;
+  background: black;
 }
 .jkeyboard .jline ul li.uppercase {
   text-transform: uppercase;
 }
 .jkeyboard .jline ul li:hover, .jkeyboard .jline ul li:active {
-  background-color: whitesmoke;
+  background-color: black;
 }
 .jkeyboard .jline .return {
   width: 100px;
@@ -59,8 +60,10 @@
 .jkeyboard .jline .shift {
   width: 80px;
   background: url("shift.png") no-repeat center center;
+  background-color: black;
 }
 .jkeyboard .jline .backspace {
   width: 49px;
   background: url("backspace.png") no-repeat center center;
+  background-color: black;
 }
