--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ main{
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    padding: 20px;
+    padding: 18px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     height: auto;
@@ -189,6 +189,16 @@ main{
     cursor: pointer;
     font-size: 30px;
 }
+.pop-keyboard {
+  position: fixed;
+  background: whitesmoke;
+  padding: 5px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+
 #width-content{
 	overflow: hidden;
 	padding: 20px;
@@ -316,6 +326,7 @@ main{
 #enterdegrees-content{
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 20px;
 }
 #enterdegrees-content input{
